--- a/.github/workflows/sync-fork.yml
+++ b/.github/workflows/sync-fork.yml
@@ -14,5 +14,5 @@ jobs:
       - uses: tgymnich/fork-sync@v2.0.10
         with:
           owner: shadowcopyrz
-          base: master
-          head: master
+          base: main
+          head: main
